--- a/9/index.html
+++ b/9/index.html
@@ -15,12 +15,12 @@
     <link rel="stylesheet" href="css/ig.css">
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/index.js"></script>
-    <meta property="og:url" content="https://mrsuniverseuae.com/9" />
+    <meta property="og:url" content="9" />
     <meta property="og:title" content="CONTESTANT 9" />
     <meta property="og:description" content="" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="9.png" />
-    <link rel="canonical" href="https://mrsuniverseuae.com/9"><!--/metatextblock-->
+    <link rel="canonical" href="9"><!--/metatextblock-->
     <meta name="format-detection" content="telephone=no" />
     <meta http-equiv="x-dns-prefetch-control" content="on">
     <link rel="dns-prefetch" href="https://ws.tildacdn.com">
@@ -222,17 +222,16 @@
                                                 class="t-menu__link-item" href="/" data-menu-submenu-hook=""
                                                 data-menu-item-number="1">home</a></li>
                                         <li class="t228__list_item" style="padding:0 15px;"><a class="t-menu__link-item"
-                                                href="/about" data-menu-submenu-hook=""
-                                                data-menu-item-number="2">About</a>
+                                                href="" data-menu-submenu-hook="" data-menu-item-number="2">About</a>
                                         </li>
                                         <li class="t228__list_item" style="padding:0 15px;"><a class="t-menu__link-item"
-                                                href="/uae" data-menu-submenu-hook=""
+                                                href="" data-menu-submenu-hook=""
                                                 data-menu-item-number="3">Mrs.Universe</a></li>
                                         <li class="t228__list_item" style="padding:0 15px;"><a class="t-menu__link-item"
-                                                href="/competition" data-menu-submenu-hook=""
-                                                data-menu-item-number="4">Location </a></li>
+                                                href="" data-menu-submenu-hook="" data-menu-item-number="4">Location
+                                            </a></li>
                                         <li class="t228__list_item" style="padding:0 0 0 15px;"><a
-                                                class="t-menu__link-item" href="/apply" data-menu-submenu-hook=""
+                                                class="t-menu__link-item" href="" data-menu-submenu-hook=""
                                                 data-menu-item-number="5">apply</a>
                                         </li>
                                     </ul>
@@ -243,8 +242,7 @@
                                     <div class="t-sociallinks">
                                         <ul role="list" class="t-sociallinks__wrapper" aria-label="Соц. сети">
                                             <!-- new soclinks -->
-                                            <li class="t-sociallinks__item t-sociallinks__item_facebook"><a
-                                                    href="https://www.facebook.com/MrsUNIVERSE-UAE-103943128542985"
+                                            <li class="t-sociallinks__item t-sociallinks__item_facebook"><a href=""
                                                     target="_blank" rel="nofollow" aria-label="facebook"
                                                     style="width: 30px; height: 30px;"><svg class="t-sociallinks__svg"
                                                         role="presentation" width=30px height=30px viewBox="0 0 100 100"
@@ -410,8 +408,7 @@
                     <div class="t282__menu__content t282__col-12">
                         <div class="t282__logo__container" style="min-height:70px;">
                             <div class="t282__logo__content"><a class="t282__logo" href="/"><img class="t282__logo__img"
-                                        src="https://static.tildacdn.one/tild6437-3232-4232-b534-653632636266/IMG_6285.jpg"
-                                        style="height: 45px;" imgfield="img" alt=""></a></div>
+                                        src="/img/IMG_6285.jpg" style="height: 45px;" imgfield="img" alt=""></a></div>
                         </div><button type="button" class="t-menuburger t-menuburger_first "
                             aria-label="Навигационное меню" aria-expanded="false"><span
                                 style="background-color:#ffffff;"></span><span
