--- a/index.html
+++ b/index.html
@@ -189,16 +189,16 @@
                                     <li class="t228__list_item" style="padding:0 15px 0 0;"><a class="t-menu__link-item"
                                             href="/" data-menu-submenu-hook="" data-menu-item-number="1">home</a></li>
                                     <li class="t228__list_item" style="padding:0 15px;"><a class="t-menu__link-item"
-                                            href="/about" data-menu-submenu-hook="" data-menu-item-number="2">About</a>
+                                            href="" data-menu-submenu-hook="" data-menu-item-number="2">About</a>
                                     </li>
                                     <li class="t228__list_item" style="padding:0 15px;"><a class="t-menu__link-item"
-                                            href="/uae" data-menu-submenu-hook=""
+                                            href="" data-menu-submenu-hook=""
                                             data-menu-item-number="3">Mrs.Universe</a></li>
                                     <li class="t228__list_item" style="padding:0 15px;"><a class="t-menu__link-item"
-                                            href="/competition" data-menu-submenu-hook=""
+                                            href="" data-menu-submenu-hook=""
                                             data-menu-item-number="4">Location </a></li>
                                     <li class="t228__list_item" style="padding:0 0 0 15px;"><a class="t-menu__link-item"
-                                            href="/apply" data-menu-submenu-hook="" data-menu-item-number="5">apply</a>
+                                            href="" data-menu-submenu-hook="" data-menu-item-number="5">apply</a>
                                     </li>
                                 </ul>
                             </nav>
