--- a/9/index.html
+++ b/9/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!--metatextblock-->
     <title>CONTESTANT 9</title>
     <link id="dynamic-favicon" href="assets/favicon.png" rel="shortcut icon" sizes="196x196">
-    <link type="text/css" rel="stylesheet" href="css/fb.css">
-    <link type="text/css" rel="stylesheet" href="css/fb_style.css">
-    <link type="text/css" rel="stylesheet" href="css/page.css">
-    <link rel="stylesheet" href="css/profile.css">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/ig.css">
+    <link type="text/css" rel="stylesheet" href="/css/fb.css">
+    <link type="text/css" rel="stylesheet" href="/css/fb_style.css">
+    <link type="text/css" rel="stylesheet" href="/css/page.css">
+    <link rel="stylesheet" href="/css/profile.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/ig.css">
     <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="/js/index.js"></script>
     <meta property="og:url" content="9" />
     <meta property="og:title" content="CONTESTANT 9" />
     <meta property="og:description" content="" />
@@ -3341,8 +3341,8 @@
                         <div class="t706__cartwin-products">
                             <div class="t706__cartwin-bottom">
                             </div>
-                            <img id="choose_fb" onclick="handleFbClick()" src="image/fb.png">
-                            <img id="choose_ig" onclick="handleIgClick()" src="image/ig.png">
+                            <img id="choose_fb" onclick="handleFbClick()" src="/image/fb.png">
+                            <img id="choose_ig" onclick="handleIgClick()" src="/image/ig.png">
                         </div>
                     </div>
                     <div class="t706__cartdata"></div>
