--- a/9/index.html
+++ b/9/index.html
@@ -3622,7 +3622,7 @@
                                                     class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1hq5gj4 x1n2onr6 x1ey2m1c x1plvlek xryxfnj x1c4vz4f x2lah0s x1q0g3np xqjyukv x1qjc9v5 x1oa3qoh xl56j7k">
                                                     <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1"
                                                         style="height: 26px; width: 52px;"><img alt="from Meta"
-                                                            src="meta.svg">
+                                                            src="/meta.svg">
                                                     </div>
                                                 </div>
                                             </main>
