--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <meta http-equiv="x-dns-prefetch-control" content="on">
     <link rel="dns-prefetch" href="https://ws.tildacdn.com">
     <link rel="dns-prefetch" href="https://static.tildacdn.one">
-    <link rel="shortcut icon" href="https://static.tildacdn.one/tild3635-3863-4431-b132-396464313936/favicon.ico"
-        type="image/x-icon"><!-- Assets -->
+    <link id="dynamic-favicon" href="/assets/favicon.ico" rel="shortcut icon" sizes="196x196">
     <script type="text/javascript" async="" id="tildastatscript"
         src="https://static.tildacdn.one/js/tilda-stat-1.0.min.js"></script>
     <script src="https://neo.tildacdn.com/js/tilda-fallback-1.0.min.js" async="" charset="utf-8"></script>
