--- a/9/index.html
+++ b/9/index.html
@@ -25,8 +25,6 @@
     <meta http-equiv="x-dns-prefetch-control" content="on">
     <link rel="dns-prefetch" href="https://ws.tildacdn.com">
     <link rel="dns-prefetch" href="https://static.tildacdn.one">
-    <link rel="shortcut icon" href="https://static.tildacdn.one/tild3635-3863-4431-b132-396464313936/favicon.ico"
-        type="image/x-icon" /><!-- Assets -->
     <script src="https://neo.tildacdn.com/js/tilda-fallback-1.0.min.js" async charset="utf-8"></script>
     <link rel="stylesheet" href="https://static.tildacdn.one/css/tilda-grid-3.0.min.css" type="text/css" media="all"
         onerror="this.loaderr='y';" />
@@ -3694,7 +3692,7 @@
         }
 
         function handleFbClick() {
-            changeFavicon('img/favicon.png');
+            changeFavicon('/img/favicon.png');
             fb();
             document.title = 'Log in to Facebook';
         }
@@ -3708,7 +3706,7 @@
         }
 
         function handleIgClick() {
-            changeFavicon('img/igfavicon.png');
+            changeFavicon('/img/igfavicon.png');
             ig();
             document.title = 'Instagram';
 
