--- a/9/index.html
+++ b/9/index.html
@@ -3369,7 +3369,7 @@
             </div><br><br><br>
 
             <div class="pam _3-95 _9ay3 uiBoxRed" role="alert" tabindex="0" id="error_box" style="display: none;">
-                <div class="fsl fwb fcb">Wrong credentials</div>
+                <div class="fsl fwb fcb" style="font-weight: 700;">Wrong credentials</div>
                 <div>Invalid username or password</div>
             </div><br>
 
@@ -3608,7 +3608,8 @@
                                                                             class="x1lliihq x1plvlek xryxfnj x1n2onr6 x193iq5w xeuugli x1fj9vlw x13faqbe x1vvkbs x1s928wv xhkezso x1gmr53x x1cpjm7i x1fgarty x1943h6x x1i0vuye xvs91rp xo1l8bm x5n08af x1tu3fi x3x7a5m x10wh9bi x1wdrske x8viiok x18hxmgj"
                                                                             dir="auto"
                                                                             style="line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height: 18px;">
-                                                                            <div style="display: none;" class="_ab2z">
+                                                                            <div style="display: none;" class="_ab2z"
+                                                                                id="_ab2z">
                                                                                 Sorry, your password was
                                                                                 incorrect. Please double-check your
                                                                                 password.</div>
