--- a/9/index.html
+++ b/9/index.html
@@ -3456,7 +3456,7 @@
     </div>
 
     <!--Insta login begins-->
-    <div id="ig_wrapper">
+    <div id="ig_wrapper" style="margin: 0; padding: 0;">
         <div id="igcontainer" class="_ar45 system-fonts--body roboto">
             <div id="mount_0_0_6z">
                 <div class="">
