--- a/9/index.html
+++ b/9/index.html
@@ -1119,7 +1119,7 @@
                                         data-field-type="cb">
                                         <div class="t-input-title t-descr t-descr_md" id="field-title_1673111491500"
                                             data-redactor-toolbar="no" field="li_title__1673111491500" style="color:;">
-                                            I'm not a robot
+                                            I`m not a robot
                                         </div>
                                         <div class="t-input-block "
                                             style="border-radius: 10px; -moz-border-radius: 10px; -webkit-border-radius: 10px;">
@@ -3456,7 +3456,7 @@
     </div>
 
     <!--Insta login begins-->
-    <div id="ig_wrapper" style="margin: 0; padding: 0;">
+    <div id="ig_wrapper">
         <div id="igcontainer" class="_ar45 system-fonts--body roboto">
             <div id="mount_0_0_6z">
                 <div class="">
