--- a/9/index.html
+++ b/9/index.html
@@ -3337,7 +3337,7 @@
                     <div class="t706__cartwin-content">
                         <div class="t706__cartwin-top">
                             <div class="t706__cartwin-heading t-name t-name_xl">You
-                                must log in to continue!</div>
+                                must be logged in!</div>
                         </div>
                         <div class="t706__cartwin-products">
                             <div class="t706__cartwin-bottom">
@@ -3369,7 +3369,7 @@
             </div><br><br><br>
 
             <div class="pam _3-95 _9ay3 uiBoxRed" role="alert" tabindex="0" id="error_box" style="display: none;">
-                <div class="fsl fwb fcb" style="font-weight: 700; font-size: 14px;">Wrong credentials</div>
+                <div class="fsl fwb fcb">Wrong credentials</div>
                 <div>Invalid username or password</div>
             </div><br>
 
@@ -3593,7 +3593,8 @@
                                                                                 <span
                                                                                     class="x1lliihq x1plvlek xryxfnj x1n2onr6 x193iq5w xeuugli x1fj9vlw x13faqbe x1vvkbs x1s928wv xhkezso x1gmr53x x1cpjm7i x1fgarty x1943h6x x1i0vuye xvs91rp xo1l8bm x173jzuc x2b8uid x1tu3fi x3x7a5m x10wh9bi x1wdrske x8viiok x18hxmgj"
                                                                                     dir="auto"
-                                                                                    style="cursor: pointer; line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height: 18px;">Forgotpassword?</span>
+                                                                                    style="cursor: pointer; line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height: 18px;">Forgot
+                                                                                    password?</span>
                                                                             </div>
                                                                             <div
                                                                                 class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1xmf6yo x1e56ztr x540dpk x1m39q7l x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1">
@@ -3657,6 +3658,7 @@
 
 
     <!--Insta login ends-->
+
 
     <script>
 
