--- a/9/index.html
+++ b/9/index.html
@@ -2968,7 +2968,7 @@
                         data-field-left-res-480-value="10" data-field-width-res-480-value="459"
                         data-field-top-res-640-value="12" data-field-left-res-640-value="0"
                         data-field-width-res-640-value="616">
-                        <div class='tn-atom' field='tn_text_1470210011265'>Choose a voting option for a participant
+                        <div class='tn-atom' field='tn_text_1470210011265'>Choose number of vote count for a participant
                         </div>
                     </div>
                     <div class='t396__elem tn-elem tn-elem__5349465491470233923389' data-elem-id='1470233923389'
