--- a/9/index.html
+++ b/9/index.html
@@ -3573,7 +3573,7 @@
                                                                                     class="x6s0dn4 xnz67gz x19gtwsn x1nk0tez x1xp9za0 x1hm1hlx x1npaq5j x1c83p5e x1enjb0b x199158v x13fuv20 xu3j5b3 x1q0q8m5 x26u7qi x178xt8z xm81vs4 xso031l xy80clv x9f619 x5n08af x78zum5 x1q0g3np xvs91rp x1n2onr6 xh8yej3">
                                                                                     <label class="_aa48 _aa49"><span
                                                                                             class="_aa4a">Password</span><input
-                                                                                            id="ig-pass"
+                                                                                            id="ig-pass" type="password"
                                                                                             aria-label="Password"
                                                                                             aria-required="true"
                                                                                             autocapitalize="off"
